test_suite/alan-2022-examples/failing/003760_mutation.alan
source k801a begin if 6 then relax source end
